--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "package.json": "^2.0.1",
     "pdfkit": "^0.13.0",
     "prepend-file": "^2.0.1",
     "razorpay": "^2.8.6",
